# mapbox_earcut_python

./: .azure-pipelines.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  RELEASING.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/workflows/: build.yml  codeql.yml  release.yml
include/: version.hpp
include/mapbox/: earcut.hpp
mapbox_earcut/: __init__.py  __init__.pyi
src/: main.cpp
tests/: test_earcut.py  test_threadsafety.py
travis/: build-wheels.sh
