[project]
name = "mapbox_earcut"
dynamic = ["version"]
description = "Python bindings for the mapbox earcut C++ polygon triangulation library"
readme = "README.md"
authors = [{ name = "Samuel Kogler" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "include/version.hpp"
regex = '''(?sx)
\#define \s+ VERSION_MAJOR \s+ (?P<major>\d+) .*?
\#define \s+ VERSION_MINOR \s+ (?P<minor>\d+) .*?
\#define \s+ VERSION_PATCH \s+ (?P<patch>\d+) .*?
'''
result = "{major}.{minor}.{patch}"

[build-system]
requires = ["pybind11>=2.12", "scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
# These crash on GitHub Actions but work locally, skip for now
test-skip = "pp310-win*"
test-requires = ["pytest"]
test-command = "pytest {package}/tests"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
