[project]
name = "mapbox_earcut"
dynamic = ["version"]
description = "Python bindings for the mapbox earcut C++ polygon triangulation library"
readme = "README.md"
authors = [{ name = "Samuel Kogler" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading :: 1 - Unstable",
]
dependencies = ["numpy"]

[project.urls]
Source = "https://github.com/skogler/mapbox_earcut_python"

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy"]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "include/version.hpp"
regex = '''(?sx)
\#define \s+ VERSION_MAJOR \s+ (?P<major>\d+) .*?
\#define \s+ VERSION_MINOR \s+ (?P<minor>\d+) .*?
\#define \s+ VERSION_PATCH \s+ (?P<patch>\d+) .*?
'''
result = "{major}.{minor}.{patch}"

[build-system]
requires = ["nanobind>=2.9.2", "scikit-build-core>=0.11.6"]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
test-requires = ["pytest"]
test-command = "pytest {package}/tests"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
